--- a/forklift.html
+++ b/forklift.html
@@ -53,5 +53,6 @@
   </head>
   <body oncontextmenu="return false;">
     <div id="KeyShotXR"></div>
+    <center<<b>Scroll Right or Left - Up or Down<\b><\center>
   </body>
 </html>
