--- a/forklift.html
+++ b/forklift.html
@@ -53,6 +53,8 @@
   </head>
   <body oncontextmenu="return false;">
     <div id="KeyShotXR"></div>
-    <center><b>Scroll Right or Left - Up or Down</b></center>
+    <center>
+      <b> Scroll Right or Left - Up or Down
+      
   </body>
 </html>
